pagina labels updated

--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -12,42 +12,42 @@
             <h1>Form 1</h1>
             <form method="post" action="/modeloForm">
                 <div class="mb-3">
-                    <label for="Pregnancies" class="form-label">pH</label>
+                    <label for="Pregnancies" class="form-label">Pregnancies</label>
                     <input type="text" class="form-control" id="Pregnancies" name="Pregnancies">                    
                 </div>
 
                 <div class="mb-3">
-                    <label for="Glucose" class="form-label">sulphates</label>
+                    <label for="Glucose" class="form-label">Glucose</label>
                     <input type="text" class="form-control" id="Glucose" name="Glucose">
                 </div>
 
                 <div class="mb-3">
-                    <label for="BloodPressure" class="form-label">alcohol</label>
+                    <label for="BloodPressure" class="form-label">BloodPressure</label>
                     <input type="text" class="form-control" id="BloodPressure" name="BloodPressure">
                 </div>
 
                 <div class="mb-3">
-                    <label for="SkinThickness" class="form-label">pH</label>
+                    <label for="SkinThickness" class="form-label">SkinThickness</label>
                     <input type="text" class="form-control" id="SkinThickness" name="SkinThickness">                    
                 </div>
 
                 <div class="mb-3">
-                    <label for="Insulin" class="form-label">sulphates</label>
+                    <label for="Insulin" class="form-label">Insulin</label>
                     <input type="text" class="form-control" id="Insulin" name="Insulin">
                 </div>
 
                 <div class="mb-3">
-                    <label for="BMI" class="form-label">alcohol</label>
+                    <label for="BMI" class="form-label">BMI</label>
                     <input type="text" class="form-control" id="BMI" name="BMI">
                 </div>
 
                 <div class="mb-3">
-                    <label for="DiabetesPedigreeFunction" class="form-label">pH</label>
+                    <label for="DiabetesPedigreeFunction" class="form-label">DiabetesPedigreeFunction</label>
                     <input type="text" class="form-control" id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction">                    
                 </div>
 
                 <div class="mb-3">
-                    <label for="Age" class="form-label">sulphates</label>
+                    <label for="Age" class="form-label">Age</label>
                     <input type="text" class="form-control" id="Age" name="Age">
                 </div>
 
