--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/estilo.css">
     </head>
     <body>
         <div class="container">
-            <h1>Form 1</h1>
+            <h1>Detección de Diabetes</h1>
             <form method="post" action="/modeloForm">
                 <div class="mb-3">
                     <label for="Pregnancies" class="form-label">Pregnancies</label>
@@ -52,7 +53,7 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-outline-secondary btn-lg">Submit</button>
             </form>
         </div>
         <div class="container">
@@ -62,7 +63,7 @@
                     <label for="file" class="form-label">Archivo</label>
                     <input type = "file" class="form-control" name = "file" id="file" />                    
                 </div>                
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="submit" class="btn btn-outline-secondary btn-lg">Load</button>
             </form>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>                
