--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -6,63 +6,57 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href=".../nodejs/public/css/estilo1.css">
     </head>
     <body>
         <div class="container">
-            <h1>Detección de Diabetes</h1>
+            <div class="row">
+                <p></p>
+                <div class="col-sm-1"></div>
+                <div class = "text-center"><h1>Detección de Diabetes</h1></div>
+                <div class="col-sm-1"></div>
+            </div>
             <form method="post" action="/modeloForm">
                 <div class="mb-3">
-                    <label for="Pregnancies" class="form-label">Pregnancies</label>
-                    <input type="text" class="form-control" id="Pregnancies" name="Pregnancies">                    
+                    <label for="pregnancies" class="form-label">Número de Embarazos:</label>
+                    <input type="text" class="form-control" id="pregnancies" name="pregnancies">                    
                 </div>
 
                 <div class="mb-3">
-                    <label for="Glucose" class="form-label">Glucose</label>
-                    <input type="text" class="form-control" id="Glucose" name="Glucose">
+                    <label for="glucose" class="form-label">Niveles de Glucosa:</label>
+                    <input type="text" class="form-control" id="glucose" name="glucose">
+                </div>
+                <div class="mb-3">
+                    <label for="bloodpressure" class="form-label">Presión Sanguinea:</label>
+                    <input type="text" class="form-control" id="bloodrepressure" name="bloodpressure">
                 </div>
 
                 <div class="mb-3">
-                    <label for="BloodPressure" class="form-label">BloodPressure</label>
-                    <input type="text" class="form-control" id="BloodPressure" name="BloodPressure">
+                    <label for="skinthickness" class="form-label">Grosor de la Piel:</label>
+                    <input type="text" class="form-control" id="skinthickness" name="skinthickness">                    
                 </div>
 
                 <div class="mb-3">
-                    <label for="SkinThickness" class="form-label">SkinThickness</label>
-                    <input type="text" class="form-control" id="SkinThickness" name="SkinThickness">                    
+                    <label for="insulin" class="form-label">Nivel de Insulina:</label>
+                    <input type="text" class="form-control" id="insulin" name="insulin">
                 </div>
 
                 <div class="mb-3">
-                    <label for="Insulin" class="form-label">Insulin</label>
-                    <input type="text" class="form-control" id="Insulin" name="Insulin">
+                    <label for="bmi" class="form-label">BMI:</label>
+                    <input type="text" class="form-control" id="bmi" name="bmi">
                 </div>
 
                 <div class="mb-3">
-                    <label for="BMI" class="form-label">BMI</label>
-                    <input type="text" class="form-control" id="BMI" name="BMI">
+                    <label for="diabetespedigreefunction" class="form-label">DiabetesPedigreeFunction</label>
+                    <input type="text" class="form-control" id="diabetespedigreefunction" name="diabetespedigreefunction">                    
                 </div>
 
                 <div class="mb-3">
-                    <label for="DiabetesPedigreeFunction" class="form-label">DiabetesPedigreeFunction</label>
-                    <input type="text" class="form-control" id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction">                    
+                    <label for="age" class="form-label">Edad:</label>
+                    <input type="text" class="form-control" id="age" name="age">
                 </div>
-
-                <div class="mb-3">
-                    <label for="Age" class="form-label">Age</label>
-                    <input type="text" class="form-control" id="Age" name="Age">
-                </div>
-
 
                 <button type="submit" class="btn btn-outline-secondary btn-lg">Submit</button>
-            </form>
-        </div>
-        <div class="container">
-            <h1>Form 2</h1>
-            <form action = "/modeloFile" method = "POST" enctype = "multipart/form-data">
-                <div class="mb-3">
-                    <label for="file" class="form-label">Archivo</label>
-                    <input type = "file" class="form-control" name = "file" id="file" />                    
-                </div>                
-                <button type="submit" class="btn btn-outline-secondary btn-lg">Load</button>
             </form>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>                
