--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
-<html>
-        <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        </head>
-        <body>
-            <h1>Form 1</h1>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="container" style="float:left;width:45%;">
+            <h1>Formulario de Diabetes</h1>
             <form method="post" action="/modeloForm">
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="Pregnancies" class="form-label">Pregnancies</label>
                     <input type="text" class="form-control" id="Pregnancies" name="Pregnancies">                    
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="Glucose" class="form-label">Glucose</label>
                     <input type="text" class="form-control" id="Glucose" name="Glucose">
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="BloodPressure" class="form-label">BloodPressure</label>
                     <input type="text" class="form-control" id="BloodPressure" name="BloodPressure">
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="SkinThickness" class="form-label">SkinThickness</label>
                     <input type="text" class="form-control" id="SkinThickness" name="SkinThickness">                    
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="Insulin" class="form-label">Insulin</label>
                     <input type="text" class="form-control" id="Insulin" name="Insulin">
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="BMI" class="form-label">BMI</label>
                     <input type="text" class="form-control" id="BMI" name="BMI">
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="DiabetesPedigreeFunction" class="form-label">DiabetesPedigreeFunction</label>
                     <input type="text" class="form-control" id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction">                    
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="Age" class="form-label">Age</label>
                     <input type="text" class="form-control" id="Age" name="Age">
                 </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
 
 
-
-
-
-
-                        <button type="submit">Enviar</button>
-                </form>
-        </body>
+        <div class="container" style="float:right;width:45%;">
+            <h1>Re entrenar modelo</h1>
+            <form action = "/modeloFile" method = "POST" enctype = "multipart/form-data">
+                <button type="submit" class="btn btn-primary">Click aqui para re entrenar</button>
+            </form>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>                
+    </body>
 </html>
