--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -55,9 +55,66 @@
         </div>
 
 
+
+
+
+        
+
         <div class="container" style="float:right;width:45%;">
+
+            <h1>Formulario de Diabetes</h1>
+            <form method="post" action="/modeloSubir">
+                <div class="mb-1">
+                    <label for="Pregnancies" class="form-label">Pregnancies</label>
+                    <input type="text" class="form-control" id="Pregnancies" name="Pregnancies">                    
+                </div>
+                <div class="mb-1">
+                    <label for="Glucose" class="form-label">Glucose</label>
+                    <input type="text" class="form-control" id="Glucose" name="Glucose">
+                </div>
+
+                <div class="mb-1">
+                    <label for="BloodPressure" class="form-label">BloodPressure</label>
+                    <input type="text" class="form-control" id="BloodPressure" name="BloodPressure">
+                </div>
+
+                <div class="mb-1">
+                    <label for="SkinThickness" class="form-label">SkinThickness</label>
+                    <input type="text" class="form-control" id="SkinThickness" name="SkinThickness">                    
+                </div>
+
+                <div class="mb-1">
+                    <label for="Insulin" class="form-label">Insulin</label>
+                    <input type="text" class="form-control" id="Insulin" name="Insulin">
+                </div>
+
+                <div class="mb-1">
+                    <label for="BMI" class="form-label">BMI</label>
+                    <input type="text" class="form-control" id="BMI" name="BMI">
+                </div>
+
+                <div class="mb-1">
+                    <label for="DiabetesPedigreeFunction" class="form-label">DiabetesPedigreeFunction</label>
+                    <input type="text" class="form-control" id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction">                    
+                </div>
+
+                <div class="mb-1">
+                    <label for="Age" class="form-label">Age</label>
+                    <input type="text" class="form-control" id="Age" name="Age">
+                </div>
+                <div class="mb-1">
+                    <label for="Outcome" class="form-label">Outcome</label>
+                    <input type="text" class="form-control" id="Outcome" name="Outcome">
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+
+            </form>
+   
+
+
+
             <h1>Re entrenar modelo</h1>
-            <form action = "/modeloFile" method = "POST" enctype = "multipart/form-data">
+            <form action = "/modeloEntrenar" method = "POST" enctype = "multipart/form-data">
                 <button type="submit" class="btn btn-primary">Click aqui para re entrenar</button>
             </form>
         </div>
