--- a/nodejs/templates/pagina.html
+++ b/nodejs/templates/pagina.html
@@ -6,10 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="../public/css/estilo1.css"> 
     </head>
     <body>
+
         <div class="container" style="float:left;width:45%;">
-            <h1>Formulario de Diabetes</h1>
+            <h1 class="text-center header ">Predicción Diabetes</h1>
             <form method="post" action="/modeloForm">
                 <div class="mb-1">
                     <label for="Pregnancies" class="form-label">Pregnancies</label>
@@ -50,19 +52,16 @@
                     <label for="Age" class="form-label">Age</label>
                     <input type="text" class="form-control" id="Age" name="Age">
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <div class="col-md-12 text-center">
+                    <button type="button" class="btn btn-success btn-lg">ENVIAR</button>
+                </div>
             </form>
         </div>
 
 
-
-
-
-        
-
         <div class="container" style="float:right;width:45%;">
 
-            <h1>Formulario de Diabetes</h1>
+            <h1 class="text-center header">Cargar Base de Datos</h1>
             <form method="post" action="/modeloSubir">
                 <div class="mb-1">
                     <label for="Pregnancies" class="form-label">Pregnancies</label>
@@ -106,16 +105,20 @@
                     <label for="Outcome" class="form-label">Outcome</label>
                     <input type="text" class="form-control" id="Outcome" name="Outcome">
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
-
+                <div class="col-md-12 text-center">
+                    <button type="button" class="btn btn-success btn-lg">ENVIAR</button>
+                </div>
             </form>
-   
+        </div>
 
-
-
-            <h1>Re entrenar modelo</h1>
+        <div class="container" style="float:left;width:45%;"></div>
+            <p></p>
+            <p></p>
+            <legend class="text-center header">Presione para re-entrenar el modelo</legend>
             <form action = "/modeloEntrenar" method = "POST" enctype = "multipart/form-data">
-                <button type="submit" class="btn btn-primary">Click aqui para re entrenar</button>
+                <div class="col-md-12 text-center">
+                    <button type="button" class="btn btn-success btn-lg btn-block">ENTRENAR</button>
+                </div>
             </form>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>                
