--- a/nodejs/templates/pagina.html
+++ b/nodejs/templates/pagina.html
@@ -53,7 +53,7 @@
                     <input type="text" class="form-control" id="Age" name="Age">
                 </div>
                 <div class="col-md-12 text-center">
-                    <button type="button" class="btn btn-success btn-lg">ENVIAR</button>
+                    <button type="button" class="btn btn-success">ENVIAR</button>
                 </div>
             </form>
         </div>
@@ -106,7 +106,7 @@
                     <input type="text" class="form-control" id="Outcome" name="Outcome">
                 </div>
                 <div class="col-md-12 text-center">
-                    <button type="button" class="btn btn-success btn-lg">ENVIAR</button>
+                    <button type="button" class="btn btn-success">ENVIAR</button>
                 </div>
             </form>
         </div>
@@ -117,7 +117,7 @@
             <legend class="text-center header">Presione para re-entrenar el modelo</legend>
             <form action = "/modeloEntrenar" method = "POST" enctype = "multipart/form-data">
                 <div class="col-md-12 text-center">
-                    <button type="button" class="btn btn-success btn-lg btn-block">ENTRENAR</button>
+                    <button type="button" class="btn btn-success btn-lg">ENTRENAR</button>
                 </div>
             </form>
         </div>
